tests/examples/snapshots/fail/sorts/sort_checking_bool.fly.z3.snap
---
source: tests/test_examples.rs
description: "--expect-fail --all-solvers -- verify tests/examples/fail/sorts/sort_checking_bool.fly"
expression: combined_stdout_stderr
---

======== STDERR: ===========
sort checking error:
error: could not unify bool and s
  ┌─ tests/examples/fail/sorts/sort_checking_bool.fly:6:1
  │
6 │ assert forall x:s. x & true
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^


